--- a/src/app/service/scroller/scroller.component.css
+++ b/src/app/service/scroller/scroller.component.css
@@ -1,10 +1,3 @@
-/* *{
-  background-color: #fafafa;
-  opacity: ;
-} */
-.scroller{
-  scroll-behavior: smooth;
-}
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -21,8 +14,8 @@ html, body {
 	height: 100%;
 	background-color: #c9d6df;
 	display: flex;
-	align-items: end;
-	justify-content: end;
+	align-items: center;
+	justify-content: center;
 }
 
 .field {
@@ -113,7 +106,28 @@ html, body {
 	}
 }
 
+.arrow {
+	width: 0;
+	height: 40px;
+	border: 1px solid #333;
+	position: relative;
+	animation: scroll 1.5s infinite;
+	-webkit-animation: scroll 1.5s infinite;
+	&::after {
+		content: '';
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: -5px;
+    width: 1px;
+    height: 10px;
 
+
+    border-top: 10px solid #333;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+	}
+}
 
 @keyframes scroll {
 	0% {
