send mail using nodemailer in server folder

--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -6,12 +6,21 @@
       <!--  -->
     </div>
     <div class="col-lg-4 col-md-4 col-12 d-flex justify-content-center">
-      <div id="box"></div>
+      <div id="box">
+        <img
+          class="img-thumbnail"
+          src="../../../assets/tinywow_profile_photo_27491504__1_-removebg-preview.png"
+        />
+      </div>
     </div>
     <div class="col-lg-4 col-md-4 col-12 mt-2">
       <p>
         Web deverloper with extensive knowledge and year of learning and
-        practice experience working in web technologies and backend developer
+        practice experience working in web technologies and backend developer.
+        With a passion for continuous learning, I stay up-to-date with the
+        latest trends and technologies in web development. I am eager to
+        contribute my skills, creativity, and dedication to an organization
+        where I can grow as a web developer and make a meaningful impact.
       </p>
       <div class="row">
         <div class="col-lg-4 col-md-4 col-4">
