--- a/src/app/components/about-me/about-me.component.css
+++ b/src/app/components/about-me/about-me.component.css
@@ -5,7 +5,7 @@
   background-color:aliceblue;
   align-items: center;
 }
-img{
+/* img{
   height: 314px;
     width: 318px;
     margin-left: 20px;
@@ -18,8 +18,8 @@ img{
     border-top-right-radius: 178px;
 
   /* border-radius: 89% 72% / 36% 102%; */
-  box-shadow:19px 15px 61px rgba(98, 56, 49, 81.1);
-}
+  /* box-shadow:19px 15px 61px rgba(98, 56, 49, 81.1); */
+/* } */ */
 h2{
   font-weight: 600;
   font-size:30px;
@@ -27,6 +27,59 @@ h2{
 p{
   font-weight: 350;
 }
+img{
+  height: 250px;
+  width: 270px;
+    /* margin-left: 20px; */
+    padding-top: 4px;
+    /* padding-right: 16px; */
+    /* background-color:#816eae; */
+    /* border-bottom-left-radius: 210px;
+    border-bottom-right-radius: 718px;
+    border-top-left-radius: 543px;
+    border-top-right-radius: 178px; */
+    opacity: 0.9;
+    background-color:#816eae;
+
+  /* border-radius: 89% 72% / 36% 102%; */
+  /* box-shadow:31px 35px 108px rgb rgba(98, 56, 49, 81.1); */
+}
+/* 89% 72% / 36% 102% */
+h2{
+  font-weight: 600;
+  font-size:30px;
+}
+p{
+  font-weight: 350;
+}
+/* .box{ */
+  /* height: 275px;
+  width: 375px; */
+
+
+/* } */
+.mybtn{
+  font-weight: 400;
+  color: aliceblue;
+  background-color: blueviolet;
+  width: 186px;
+  border-radius: 10px;
+  padding: 7px;
+  text-align: center;
+}
+
+
+i{
+  color: aliceblue;
+  background-color: blueviolet;
+}
+
+p{
+  font-size: 15px;
+  font-family: system-ui;
+  font-weight: normal;
+}
+
 
 .mybtn{
   font-weight: 400;
