--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -7,8 +7,13 @@
       <h2>Hi,I'am Gautam</h2>
       <h6>FullStack developer</h6>
       <p>
-        High level expericence in web desgin and development knowledge
-        producting quality work.
+        Proficient in front-end technologies such as HTML, CSS, and JavaScript,
+        with a focus on creating responsive and visually stunning websites and
+        development knowledge producting quality work.
+        <br />
+        Strong understanding of back-end technologies such as Node.js and PHP,
+        allowing for the seamless integration of front-end and back-end
+        functionalities
       </p>
       <!-- <div class="mybtn mb-3">
         <a routerLink="/contactme"></a>Contact Me
