add cv downloader , call and mail

--- a/src/app/components/about-me/about-me.component.css
+++ b/src/app/components/about-me/about-me.component.css
@@ -84,7 +84,7 @@ p{
 .mybtn{
   font-weight: 400;
   color: aliceblue;
-  background-color: #7D1DF1;
+  background-color: blueviolet;
   width: 186px;
   border-radius: 10px;
   padding: 7px;
