--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <div class="mybtn mt-3 mb-5">
+        <div (click)="downloadPDF()" class="mybtn mt-3 mb-5">
           Download CV <i class="bi bi-download"></i>
         </div>
       </div>
