--- a/src/app/components/contactme/contactme.component.html
+++ b/src/app/components/contactme/contactme.component.html
@@ -26,18 +26,18 @@
     <div class="col-lg-2"></div>
     <div class="col-lg-4 col-md-6 col-12 lead">
       <div>
-        <h4><i class="bi bi-telephone"></i> Call Me :</h4>
-        <p>+91 9410011857</p>
+        <h4 (click)="callme()"><i class="bi bi-telephone"></i> Call Me :</h4>
+        <p (click)="callme()">+91 9410011857</p>
       </div>
       <div>
-        <h4>
+        <h4 (click)="mailme()">
           <i
             ><img
               src="../../../assets/email-transformed.jpeg"
               style="height: 50px; width: auto; mix-blend-mode: multiply" /></i
           >Email :
         </h4>
-        <p>gautamyadav1992002@gmail.com</p>
+        <p (click)="mailme()">gautamyadav1992002@gmail.com</p>
       </div>
     </div>
 
