--- a/src/app/components/contactme/contactme.component.html
+++ b/src/app/components/contactme/contactme.component.html
@@ -82,6 +82,13 @@
           Send Message <i class="bi bi-cursor"></i>
         </div> -->
       </form>
+      <p style="font-size: small">
+        note :
+        <i
+          >if you didn't receive feed-back message or not get the "Done" message
+          on your screen then please use mentioned gmail</i
+        >
+      </p>
     </div>
     <div class="col-lg-1 col-md-1"></div>
   </div>
